31 July 2014: Wouter
	- DNS64 from Viagenie (BSD Licensed), written by Simon Perrault.
	  Initial commit of the patch from the FreeBSD base (with its fixes).
	  This adds a module (for module-config in unbound.conf) dns64 that
	  performs DNS64 processing, see README.DNS64.
	- Changes from DNS64:
	  strcpy changed to memmove.
	  arraybound check fixed from prefix_net/8/4 to prefix_net/8+4.
	  allocation of result consistently in the correct region.
	  time_t is now used for ttl in unbound (since the patch's version).
	- testdata/dns64_lookup.rpl for unit test for dns64 functionality.

29 July 2014: Wouter
	- Patch from Dag-Erling Smorgrav that implements feature, unbound -dd
	  does not fork in the background and also logs to stderr.

21 July 2014: Wouter
	- Fix endian.h include for OpenBSD.

16 July 2014: Wouter
	- And Fix#596: Bail out of unbound-control dump_infra when ssl
	  write fails.

15 July 2014: Wouter
	- Fix #596: Bail out of unbound-control list_local_zones when ssl
	  write fails.
	- iana portlist update.

13 July 2014: Wouter
	- Configure tests if main can be linked to from getentropy compat.

12 July 2014: Wouter
	- Fix getentropy compat code, function refs were not portable.
	- Fix to check openssl version number only for OpenSSL.
	- LibreSSL provides compat items, check for that in configure.
	- Fix bug in fix for log locks that caused deadlock in signal handler.
	- update compat/getentropy and arc4random to the most recent ones from OpenBSD.

11 July 2014: Matthijs
	- fake-rfc2553 patch (thanks Benjamin Baier).

11 July 2014: Wouter
	- arc4random in compat/ and getentropy, explicit_bzero, chacha for
	  dependencies, from OpenBSD.  arc4_lock and sha512 in compat.
	  This makes arc4random available on all platforms, except when
	  compiled with LIBNSS (it uses libNSS crypto random).
	- fix strptime implicit declaration error on OpenBSD.
	- arc4random, getentropy and explicit_bzero compat for Windows.

4 July 2014: Wouter